--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.9"
 numpy = "^1.22.3"
 psutil = "^5.9.0"
+whitespace = "^1.0.0-beta.8"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
