updated project info

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,8 @@
 name = "deneme-sahasi"
 version = "0.1.0"
 description = "testing area"
-authors = ["Your Name <you@example.com>"]
+authors = ["mal1kc"]
+
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -13,6 +14,11 @@ whitespace = "^1.0.0-beta.8"
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
 
+[tool.pyright]
+venvPath=".venv"
+
 [build-system]
+
 requires = ["poetry-core>=1.0.0"]
+
 build-backend = "poetry.core.masonry.api"
