added clock-ncurses zig & binary search py

--- a/zig/clock-ncurses/.gitignore
+++ b/zig/clock-ncurses/.gitignore
@@ -12,8 +12,8 @@
 .zig-cache/
 zig-cache/
 zig-out/
-/release/
-/debug/
-/build/
-/build-*/
-/docgen_tmp/
+release/
+debug/
+build/
+build-*/
+docgen_tmp/
